--- a/medical_imaging_project/static/css/main.css
+++ b/medical_imaging_project/static/css/main.css
@@ -14,6 +14,7 @@ header {
     width: 100%;
     height: 80px;
 	margin-top: 16px;
+	margin-bottom: 16px;
 	padding-bottom: 16px;
 	border-bottom: solid 1.6px black;
     display: flex;
@@ -44,4 +45,10 @@ header ul > li {
 	height: 100%;
 	display: flex;
 	align-items: center;
+}
+
+.pre_dicom {
+	width : 480px;
+	height: 480px;
+	background-color: #d3d3d3;
 }
