--- a/medical_imaging_project/templates/main/index.html
+++ b/medical_imaging_project/templates/main/index.html
@@ -22,17 +22,72 @@
                 <ul>
                     <li><a href="">Contact</a></li>
                     <li><a href="">Donate</a></li>
+                    <li><a href="">More</a></li>
                 </ul>
             </nav>
         </header>
+
+        <div class="title">
+            <h2>For DICOM Image Transform</h2>
+        </div>
+        <div class="exp">
+            <p><i>Your image is reszied only in the HTML. (Download data will raw image.)
+            </i></p>
+        </div>
+
+        <div class="pre_dicom">
+            <img id="pre_img" src="">
+        </div>
+
+        <div id="arrowAnim">
+            <!-- The MIT License (MIT)
+                Copyright (c) 2022 Ed Tschoepe (https://codepen.io/RenMan/pen/jwWKMb)
+                Permission is hereby granted, free of charge, to any person obtaining a copy
+                of this software and associated documentation files (the "Software"), to deal
+                in the Software without restriction, including without limitation the rights
+                to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+                copies of the Software, and to permit persons to whom the Software is
+                furnished to do so, subject to the following conditions:
+                
+                The above copyright notice and this permission notice shall be included in all
+                copies or substantial portions of the Software.
+                
+                THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+                IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+                FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+                AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+                LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+                OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+                SOFTWARE.
+            -->
+            <div class="arrowSliding">
+              <div class="arrow"></div>
+            </div>
+            <div class="arrowSliding delay1">
+              <div class="arrow"></div>
+            </div>
+            <div class="arrowSliding delay2">
+              <div class="arrow"></div>
+            </div>
+            <div class="arrowSliding delay3">
+              <div class="arrow"></div>
+            </div>
+        </div>
+
+        <div class="post_dicom">
+            <img id="post_img" src="">
+        </div>
+
         <form id="uploadForm" enctype="multipart/form-data">
             {% csrf_token %}
-            <!-- <input type="file" id="image" accept="image/*" onchange="setThumbnail(event);"/> -->
-            <input type="file" id="dicomInput" accept=".dcm" onchange="show_img()">
+            <!-- <input type="file" id="dicomInput" accept=".dcm" onchange="show_img()"> -->
+            <div class="filebox">
+                <input class="upload-name" value="File Name" placeholder="File Name">
+                <label for="dicomInput">Upload DICOM</label> 
+                <input type="file" id="dicomInput" accept=".dcm" onchange="show_img()">
+                <!-- <input type="file" id="file"> -->
+            </div>
         </form>
-        <div class="pre_dicom">
-            <img id="img" src="">
-        </div>
     </div>
 </body>
 <script>
@@ -64,16 +119,21 @@
             data: formData,
             success: function(rtn){
                 console.log("data:image/png;base64,"+"aaa")
-                document.getElementById('img').src = "data:image/png;base64,"+rtn["dicom_image"];
-                $('#img').load(location.href + '#img')
+                document.getElementById('pre_img').src = "data:image/png;base64,"+rtn["dicom_image"];
+                $('#pre_img').load(location.href + '#pre_img')
             },
             err: function(err){
                 console.log("err:", err)
             }
         })
 
-        resize()
     }
+
+    $("#dicomInput").on('change',function(){
+        // var fileName = $("#dicomInput").val();
+        var fileName = document.getElementById("dicomInput").files[0].name;
+        $(".upload-name").val(fileName);
+        });
 </script>
 
 </html>
