--- a/medical_imaging_project/static/css/main.css
+++ b/medical_imaging_project/static/css/main.css
@@ -65,6 +65,7 @@ header ul > li {
 	width : 480px;
 	height: 480px;
 	background-color: #d3d3d3;
+	position: relative;
 }
 
 .post_dicom {
@@ -159,4 +160,26 @@ header ul > li {
     height: 0;
     padding: 0;
     border: 0;
+}
+
+
+.pre_dicom img {
+	width: 100%;
+	vertical-align: middle;
+}
+.pre_dicom-text {
+	padding: 5px 10px;
+	font-size: 24px;
+	color: rgb(78, 78, 78);
+	text-align: center;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate( -50%, -50% );
+}
+
+.col-md-3{
+    height: 100px;
+    background-color:rgb(230,230,230);
+    text-align:center;
 }
